--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONEST-Controle de Estoque</title>
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
 </head>
+
 <body>
-    <h1>CONEST</h1>
+    <div class="container">
+        <h1>CONEST</h1>
+    </div>
+    <!-- rodapé -->
+    <footer>
+        <p id="data"></p>
+    </footer>
+    <!-- bootstrap -->
+    <script src="../public/js/bootstrap.min.js"></script>
+
+    <!-- css personalizado -->
+    <link rel="stylesheet" href="../public/css/style.css">
 
     <script src="renderer.js"></script>
 </body>
+
 </html>
