--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,6 +12,9 @@
 <body>
     <div class="container">
         <h1>CONEST</h1>
+        <button class="btn btn-outline-warning" onclick="sobre()">Sobre</button>
+        <br><br><br>
+        <a href="clientes.html" target="_blank"><img src="../public/img/clientes.png" alt="cliente"></a>
     </div>
     <!-- rodapé -->
     <footer>
