--- a/src/views/clientes.html
+++ b/src/views/clientes.html
@@ -6,19 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'">
     <title>Clientes</title>
-        <!-- bootstrap -->
-        <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    
 </head>
 
 <body>
+    <br>
     <div class="container">
-    <h1>Clientes</h1>
-</div>
-<!-- bootstrap -->
-<script src="../public/js/bootstrap.min.js"></script>
+        <form class="row g-3" id="frmCliente">
+            <div class="col-md-6">
+                <input type="text" class="form-control" id="inputSearch" maxlength="30" spellcheck="false">
+            </div>
+            <!-- Botão de pesquisa de cliente CRUD Read -->
+            <div class="col-md-4">
+                <button type="button" class="btn btn-primary" id="btnRead">Buscar</button>
+            </div>
 
-<!-- css personalizado -->
-<link rel="stylesheet" href="../public/css/style.css">
+            <hr class="border border-primary border-1 opacity-75">
+            <!-- ID do MongoDB ocultar esta linha -->
+            <div class="col-md-6">
+                <input type="text" class="form-control" id="inputId" placeholder="id">
+                <br>
+
+            </div>
+            <!-- Nome do Cliente -->
+            <div class="col-md-8">
+                <label for="inputname" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="inputname" required maxlength="30" spellcheck="false">
+            </div>
+
+            <!-- Telefone do cliente -->
+            <div class="col-md-4">
+                <label for="inputphone" class="form-label">Telefone</label>
+                <input type="tel" class="form-control" id="inputphone" required maxlength="15" spellcheck="false">
+            </div>
+
+            <!-- email do cliente -->
+            <div class="col-md-12">
+                <label for="inputAddress" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="inputAddress" maxlength="30" spellcheck="false">
+            </div>
+
+            <!-- Botões -->
+            <div class="col-12">
+                <br>
+                <button type="submit" class="btn btn-success" id="btnCreate">Adicionado</button>
+                <button type="button" class="btn btn-warning" id="btnUpdate">Editar</button>
+                <button type="button" class="btn btn-danger" id="btnDelete">Excluir</button>
+                <button type="reset" class="btn" id="btnReset"></button>
+            </div>
+        </form>
+    </div>
+    <!-- bootstrap -->
+    <script src="../public/js/bootstrap.min.js"></script>
+
+    <!-- css personalizado -->
+    <link rel="stylesheet" href="../public/css/style.css">
 </body>
 
 </html>
