--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,13 +12,15 @@
 <body>
     <div class="container">
         <h1>CONEST</h1>
-        <button class="btn btn-outline-warning" onclick="sobre()">Sobre</button>
-        <br><br><br>
-        <a href="clientes.html" target="_blank"><img src="../public/img/clientes.png" alt="cliente"></a>
+        <button class="btn btn white"><img src="../public/img/clientes.png" alt="clientes" onclick="clientes()"></button>
+        <button class="btn btn white"><img src="../public/img/fornecedores.png" alt="fornecedores" onclick="fornecedores()"></button>
+        <button class="btn btn white"><img src="../public/img/produto.png" alt="produto" onclick="produto()"></button>
+
     </div>
     <!-- rodapé -->
     <footer>
         <p id="data"></p>
+        <img src="../public/img/dboff.png" alt="bdoff">
     </footer>
     <!-- bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
