--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,6 +15,7 @@
         <button class="btn btn white"><img src="../public/img/clientes.png" alt="clientes" onclick="clientes()"></button>
         <button class="btn btn white"><img src="../public/img/fornecedores.png" alt="fornecedores" onclick="fornecedores()"></button>
         <button class="btn btn white"><img src="../public/img/produto.png" alt="produto" onclick="produto()"></button>
+        <button class="btn btn white"><img src="../public/img/relatorio.png" alt="relatorio" onclick="relatorios()"></button>
 
     </div>
     <!-- rodapé -->
