--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -93,3 +93,18 @@ footer p {
 #uf {
     margin-top: 8px;
 }
+.barcode {
+    height: 45px;
+    width: 45px;
+}
+/* imagem do produto */
+#imageProduct {
+    border: 1px solid #dfdfdf;
+    border-radius: 5px;
+    width: 260px;
+    height: 260px;
+    padding: 4px;
+    position: fixed;
+    right: 45px;
+    bottom: 15px;
+}
