--- a/src/views/clientes.html
+++ b/src/views/clientes.html
@@ -32,20 +32,20 @@
             </div>
             <!-- Nome do Cliente -->
             <div class="col-md-8">
-                <label for="inputname" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="inputname" required maxlength="30" spellcheck="false">
+                <label for="inputnameCliente" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="inputnameCliente" required maxlength="30" spellcheck="false">
             </div>
 
             <!-- Telefone do cliente -->
             <div class="col-md-4">
-                <label for="inputphone" class="form-label">Telefone</label>
-                <input type="tel" class="form-control" id="inputphone" required maxlength="15" spellcheck="false">
+                <label for="inputphoneCliente" class="form-label">Telefone</label>
+                <input type="tel" class="form-control" id="inputphoneCliente" required maxlength="15" spellcheck="false">
             </div>
 
             <!-- email do cliente -->
             <div class="col-md-12">
-                <label for="inputAddress" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="inputAddress" maxlength="30" spellcheck="false">
+                <label for="inputAddressCliente" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="inputAddressCliente" maxlength="30" spellcheck="false">
             </div>
 
             <!-- Botões -->
@@ -61,6 +61,7 @@
     <!-- bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
 
+    <script src="cliente.js"></script>
     <!-- css personalizado -->
     <link rel="stylesheet" href="../public/css/style.css">
 </body>
