--- a/src/views/index.html
+++ b/src/views/index.html
@@ -21,7 +21,7 @@
     <!-- rodapé -->
     <footer>
         <p id="data"></p>
-        <img src="../public/img/dboff.png" alt="bdoff">
+        <img src="../public/img/dboff.png" alt="bdoff" id="status">
     </footer>
     <!-- bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
