--- a/src/views/clientes.html
+++ b/src/views/clientes.html
@@ -20,7 +20,7 @@
             </div>
             <!-- Botão de pesquisa de cliente CRUD Read -->
             <div class="col-md-4">
-                <button type="button" class="btn btn-primary" id="btnRead">Buscar</button>
+                <button type="button" class="btn btn-primary" id="btnRead" onclick="buscarCliente()">Buscar</button>
             </div>
 
             <hr class="border border-primary border-1 opacity-75">
@@ -54,7 +54,7 @@
                 <button type="submit" class="btn btn-success" id="btnCreate">Adicionado</button>
                 <button type="button" class="btn btn-warning" id="btnUpdate">Editar</button>
                 <button type="button" class="btn btn-danger" id="btnDelete">Excluir</button>
-                <button type="reset" class="btn" id="btnReset"></button>
+                <button type="reset" class="btn" id="btnReset" onclick="resetForm()"></button>
             </div>
         </form>
     </div>
