--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>CONEST</h1>
         <button class="btn btn white"><img src="../public/img/clientes.png" alt="clientes" onclick="clientes()"></button>
-        <button class="btn btn white"><img src="../public/img/fornecedores.png" alt="fornecedores" onclick="fornecedores()"></button>
+        <button class="btn btn white"><img src="../public/img/fornecedor.png" alt="fornecedores" onclick="fornecedores()"></button>
         <button class="btn btn white"><img src="../public/img/produto.png" alt="produto" onclick="produto()"></button>
         <button class="btn btn white"><img src="../public/img/relatorio.png" alt="relatorio" onclick="relatorios()"></button>
 
