--- a/src/views/fornecedores.html
+++ b/src/views/fornecedores.html
@@ -102,8 +102,8 @@
             <div class="col-12">
                 <button type="submit" class="btn btn-outline-success" id="btnCreate">Adicionar</button>
                 <button type="button" class="btn btn-outline-warning" id="btnUpdate" onclick="editarFornecedor()">Editar</button>
-                <button type="button" class="btn btn-outline-danger" id="btnDelete">Excluir</button>
-                <button type="reset" class="btn" id="btnReset"></button>
+                <button type="button" class="btn btn-outline-danger" id="btnDelete" onclick="excluirFornecedor()">Excluir</button>
+                <button type="reset" class="btn" id="btnReset"onclick="resetForm()"></button>
             </div>
         </form>
     </div>
