--- a/src/views/fornecedores.html
+++ b/src/views/fornecedores.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <link rel="stylesheet" href="../public/css/style.css">
     <title>Fornecedores</title>
+    <body style="background-color: gainsboro">
+        
+    </body>
 </head>
 
 <body>
 
     <div class="container">
-        <h1>Fornecedor</h1>
-        <form class="row g-3" id="frmFornecedor">
+        <h1 class="mt-3">Fornecedor</h1>
+        <form class="row g-4" id="frmFornecedor">
             <!-- Caixa de input usada na pesquisa do nome do fornecedor -->
             <div class="col-md-6">
                 <input type="text" class="form-control" id="inputSearch" maxlength="30" spellcheck="false">
@@ -37,11 +40,13 @@
             <div class="col-md-4">
                 <label for="inputCnpj" class="form-label">CNPJ</label>
                 <input type="number" class="form-control" id="inputCnpj" spellcheck="false" required>
+                
             </div>
             <!-- Telefone do fornecedor -->
             <div class="col-md-4">
                 <label for="inputPhone" class="form-label">Telefone</label>
                 <input type="number" class="form-control" id="inputPhone" spellcheck="false" required>
+                <span id="phoneError" style="color: red; display: none;">Por favor, preencha o campo de telefone.</span>
             </div>
             <!-- Email do fornecedor -->
             <div class="col-md-5">
@@ -101,7 +106,7 @@
             <!-- Botões -->
             <div class="col-12">
                 <button type="submit" class="btn btn-outline-success" id="btnCreate">Adicionar</button>
-                <button type="button" class="btn btn-outline-warning" id="btnUpdate" onclick="editarFornecedor()">Editar</button>
+                <button type="submit" class="btn btn-outline-warning" id="btnUpdate" onclick="editarFornecedor()" onclick="validarphone()">Editar</button>
                 <button type="button" class="btn btn-outline-danger" id="btnDelete" onclick="excluirFornecedor()">Excluir</button>
                 <button type="reset" class="btn" id="btnReset"onclick="resetForm()"></button>
             </div>
